[gd_scene load_steps=9 format=2]

[ext_resource path="res://Script/GUI.gd" type="Script" id=1]
[ext_resource path="res://Art/gui.png" type="Texture" id=2]
[ext_resource path="res://Script/Slot01.gd" type="Script" id=3]
[ext_resource path="res://Art/arma01.png" type="Texture" id=4]
[ext_resource path="res://Script/Slot02.gd" type="Script" id=5]
[ext_resource path="res://Art/arma02.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 41.2547

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 41.9874

[node name="GUI" type="Node2D"]
z_index = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 92.2277 ]
}

[node name="Base" type="Sprite" parent="."]
position = Vector2( 220.991, 60.8786 )
scale = Vector2( 0.726628, 0.726628 )
texture = ExtResource( 2 )

[node name="Slot01" type="Area2D" parent="."]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )

[node name="Slot01" type="Sprite" parent="Slot01"]
position = Vector2( 63.6164, 56.5054 )
scale = Vector2( 0.421806, 0.421806 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot01"]
position = Vector2( 64.218, 58.0724 )
shape = SubResource( 1 )

[node name="Slot02" type="Area2D" parent="."]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )

[node name="Slot02" type="Sprite" parent="Slot02"]
position = Vector2( 157.448, 56.868 )
scale = Vector2( 0.437314, 0.437314 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot02"]
position = Vector2( 159.54, 56.8802 )
shape = SubResource( 2 )

[node name="Slot03" type="Sprite" parent="."]

[node name="Score" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 328.0
margin_top = 28.0
margin_right = 366.0
margin_bottom = 42.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "50"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_top = 81.0
margin_right = 74.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "50"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 146.0
margin_top = 81.0
margin_right = 170.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_top = 81.0
margin_right = 262.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "200"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

